--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,6 @@
+<!-- views/index.hbs -->
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<p>Bem-vindo à {{title}}!</p>
+
+<!-- Link para acessar a lista de produtos -->
+<p><a href="/produtos/lista">Veja todos os produtos</a></p>
